con la ruta relatva de VSC para img inicio

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
 </head>
 
 
+
+
 <body>
     <header>
         <nav>
             <input type="checkbox" name="" id="nav-toggle">
             <div class="logo">
-                <img class="logo" src="./IMG/LogoNM.png" alt="Logo Nicolas Melgar">
+                <img class="logo" src="IMG\LogoNM.png" alt="Logo Nicolas Melgar">
             </div>
 
             <!-- Falta hacer y  linkear las páginas -->
@@ -55,10 +57,10 @@
     <div class="container">
         <section>  <!--OJO...esto no lo puedo sacar porque se me desompagina todo, de cualquier modo tendría problemas para indicar cosas como los párrafos, Podría poner clases supongo -->
             <P class="cita">"Nada debemos esperar sino de nosotros mismos." <br> J. G. Artigas</P>
-
+            
             <div class="contenedorImgTxt">
                 <div class="mensaje">
-                    <img src="./IMG/selfie2sf.png" alt="Foto de Nicolas Melgar">
+                    <img src="IMG\selfie2sf.png" alt="Foto de Nicolas Melgar">
                 </div>
                 <div class="inicioTextos">
                     <h1>Nicolás Melgar</h1>
