--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <body>
     <header>
         <nav>
-            <input type="checkbox" name="" id="nav-toggle">
+            <input type="checkbox" name="nav" id="nav-toggle">
             <div class="logo">
-                <img class="logo" src="IMG\LogoNM.png" alt="Logo Nicolas Melgar">
+                <img class="logo" src="IMG/LogoNM.png" alt="Logo Nicolas Melgar">
             </div>
 
             <!-- Falta hacer y  linkear las páginas -->
@@ -60,7 +60,7 @@
             
             <div class="contenedorImgTxt">
                 <div class="mensaje">
-                    <img src="IMG\selfie2sf.png" alt="Foto de Nicolas Melgar">
+                    <img src="IMG/selfie2sf.png" alt="Foto de Nicolas Melgar">
                 </div>
                 <div class="inicioTextos">
                     <h1>Nicolás Melgar</h1>
