--- a/Pages/SobreMi.html
+++ b/Pages/SobreMi.html
@@ -27,7 +27,7 @@
         <nav>
             <input type="checkbox" name="" id="nav-toggle">
             <div class="logo">
-                <img class="logo" src="../IMG/Logo NM.png" alt="Logo Nicolas Melgar">
+                <img class="logo" src="../IMG/LogoNM.png" alt="Logo Nicolas Melgar">
             </div>
 
             <!-- Falta hacer y  linkear las páginas -->
@@ -95,7 +95,7 @@
         <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0"
             aria-valuemax="100">
             <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%" style="height: 40px">
-                75x%</div>
+                75%</div>
         </div>
     </div>
 
