--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -68,8 +68,8 @@
     
                         <input type="number" name="" id="" placeholder="Teléfono" class="form-control">
                     </div>
-                    <textarea rows="5" class="form-control" placeholder="Escriba su mensaje"></textarea>
-                    <input type="submit" class="send-btn">
+                    <textarea rows="5" class="form-control textArea" placeholder="Escriba su mensaje"></textarea>
+                    <input type="submit" class="send-btn mx-auto">
                 </form>
             </div>
         </section>
@@ -81,7 +81,7 @@
     <footer class="pie-pagina">
         <div class="grupo1">
             <div class="box ocultar">
-                <h2>MEMENTUM</h2>
+                <h2>MOMENTUM</h2>
                 <!-- <h2>QUORUM</h2> -->
                 <!-- <h2>MOMENTUM</h2> -->
                 <!-- <h2>RES NON VERBA</h2> -->
