--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <footer class="pie-pagina">
         <div class="grupo1">
             <div class="box ocultar">
-                <h2>MEMENTUM</h2>
+                <h2>MOMENTUM</h2>
                 <!-- <h2>QUORUM</h2> -->
                 <!-- <h2>MOMENTUM</h2> -->
                 <!-- <h2>RES NON VERBA</h2> -->
