Reparaciones finales para que quede mejor

--- a/index.html
+++ b/index.html
@@ -65,19 +65,8 @@
                 <div class="inicioTextos">
                     <h1>Nicolás Melgar</h1>
                     <h3>Diseño y desarrollo web</h3>
-                    <p class="descript">Acá habría que colocar un texto descriptivo de dos o tres líneas. Consideraría
-                        dejar
-                        libre todo lo demás, habría que probar con color de fondo sólido y sin imágenes.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat laboriosam perferendis
-                        distinctio
-                        non
-                        quibusdam ex. Nostrum corporis non ea dolores hic ullam molestias odit rem dolorem, mollitia
-                        ratione
-                        quas minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio et amet
-                        molestias
-                        explicabo optio sequi illo reprehenderit eum accusamus, similique consequuntur voluptatibus
-                        pariatur
-                        dicta quibusdam, ipsam animi incidunt vero ab!
+                    <p class="descript">
+                        He visto la internet desde las primeras conexiones por teléfono de línea. El avance que ha tenido me parece increíble y no he podido dejar que querer aprender cómo se ha logrado. Antes un arquitecto construía en el mundo real, ahora se lo puede hacer en el mundo virtual. Sin embargo, el vértigo de semejante transformación conlleva implícita la actualización permanente, y eso me encanta. Hace varias décadas iniciar un sistema operativo con un disco de booteo era épico y Wikipedia impresionante. Ahora crear un sitio web es una realidad y el futuro es una posibilidad infinita.
                     </p>
                 </div>
 
