--- a/Pages/Portafolio.html
+++ b/Pages/Portafolio.html
@@ -65,7 +65,7 @@
                             <p class="card-text">Aquí podría tener algunas variantes del sitio original? O bien podría sumar cosas que no use y me gustaron.</p>
                         </div>
                         <div class="card-footer">
-                            <small class="text-body-secondary">Ver trabajo</small>
+                            <small class="text-body-secondary">Ver trabajo [Estos link no funcionan]</small>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                             <p class="card-text">Aquí podría poner un acceso a formularios hechos por mi. De lo contrario tendría sentido una landing o algo así</p>
                         </div>
                         <div class="card-footer">
-                            <small class="text-body-secondary">Ver trabajo</small>
+                            <small class="text-body-secondary">Ver trabajo [Estos link no funcionan]</small>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                             <p class="card-text">Aquí también se podría sumar el acceso a Git y linkear el acceso</p>
                         </div>
                         <div class="card-footer">
-                            <small class="text-body-secondary">Ver trabajo</small>
+                            <small class="text-body-secondary">Ver trabajo [Estos link no funcionan]</small>
                         </div>
                     </div>
                 </div>
